k8s/service-custom.yml
apiVersion: v1
kind: Service
metadata:
  name: custom-nginx-service
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 80
